# flaim

./: INSTALL  Makefile.am  README  README.W32  configure.ac  libflaim.changes  libxflaim.changes
flaim/obs/: Makefile.am  flaim.spec.in
flaim/src/: Makefile.am  checksum.cpp  ddprep.cpp  ecache.h  f64bitfh.cpp  f64bitfh.h  f_coltb1.cpp  f_nici.cpp  f_nici.h  f_tocoll.cpp  f_uncoll.cpp  fbcd.cpp  fblob.cpp  fbuff.h  fcs.cpp  fcs.h  fcs_bios.cpp  fcs_dis.cpp  fcs_dos.cpp  fcs_ipis.cpp  fcs_ipos.cpp  fcs_tcp.cpp  fcs_util.cpp  fcs_wire.cpp  fdb.cpp  fdbcnfig.cpp  fdbcopy.cpp  fdbremov.cpp  fdbrenam.cpp  fdict.cpp  fdict.h  fdictbld.cpp  fdir.h  fdynbtre.cpp  fdynsset.cpp  fdynsset.h  fexpimp.cpp  ffilehdl.cpp  ffilehdl.h  ffilehdr.cpp  (+195 more)
flaim/util/: Makefile.am  basic_test.cpp  checkdb.cpp  checkdb.vcproj  dbshell.cpp  dbshell.h  fform.h  flm_dlst.cpp  flm_dlst.h  flm_edit.cpp  flm_edit.h  flm_lutl.cpp  flm_lutl.h  flmarg.h  flmunittest.cpp  flmunittest.h  fshell.h  ftx.cpp  ftx.h  ftxunix.cpp  gigatest.cpp  gigatest.h  ha_flaim.cpp  ha_flaim.h  rebuild.cpp  rebuild.vcproj  rflread.cpp  rflread.h  sample.cpp  sample.vcproj  sharutil.cpp  sharutil.h  ut_basictest.vcproj  utilsup.vcproj  view.cpp  view.h  view.vcproj  viewblk.cpp  viewdisp.cpp  viewedit.cpp  (+8 more)
ftk/: COPYING  COPYRIGHT  ChangeLog  Doxyfile  Makefile  Makefile.am  README  README.W32  configure.ac  libflaimtk.pc.in
ftk/docs/: Makefile.am  doxyfile.in
ftk/m4/: ac_prog_try_doxygen.m4
ftk/obs/: Makefile.am  flaimtk.spec.in  ftk.spec.in
ftk/src/: Makefile.am  flaimtk.h  ftk.h  ftkarg.cpp  ftkbtree.cpp  ftkcmem.cpp  ftkcoll.cpp  ftkcsum.cpp  ftkdir.cpp  ftkdom.cpp  ftkdynbtree.cpp  ftkdynrset.cpp  ftkdynrset.h  ftkerror.cpp  ftkfsys.cpp  ftkftx.cpp  ftkhttp.cpp  ftkini.cpp  ftkiobuf.cpp  ftklock.cpp  ftklog.cpp  ftkmem.cpp  ftkmfh.cpp  ftkmisc.cpp  ftknet.cpp  ftknlm.cpp  ftknlm.h  ftkntab.cpp  ftkpath.cpp  ftkprntf.cpp  ftkrand.cpp  ftkrset.cpp  ftksem.cpp  ftkstrm.cpp  ftksupr.cpp  ftksys.h  ftktext.cpp  ftkthrd.cpp  ftktime.cpp  ftkunix.cpp  (+3 more)
ftk/util/: Makefile.am  ftktest.cpp
ftk/win32/ftk/: build.cmd  buildall.cmd  cleanall.cmd  ftk.sln
sql/: INSTALL.W32  Makefile  Makefile.am  README  README.W32  configure.ac  libflaimsql.pc.in
sql/m4/: ac_prog_try_doxygen.m4
sql/obs/: Makefile.am  sqlflaim.spec.in
sql/src/: Makefile.am  btreeinfo.cpp  checksum.cpp  createdatabase.cpp  createindex.cpp  createtable.cpp  deleterow.cpp  dropdatabase.cpp  dropindex.cpp  droptable.cpp  f_btpool.cpp  f_btpool.h  f_btree.cpp  f_btree.h  f_nici.cpp  f_nici.h  fbtrset.cpp  fbtrset.h  fcache.h  fcollate.cpp  fcollate.h  fdbcnfig.cpp  fdbcopy.cpp  fdbremov.cpp  fdbrenam.cpp  fdict.cpp  fdict.h  fdllmain.cpp  fdynbtre.cpp  fdynbuf.cpp  fdynbuf.h  fdynsset.cpp  fdynsset.h  ffilehdr.cpp  filesys.h  flaimodbc.h  flaimsql.h  flaimsys.h  flbackup.cpp  flclose.cpp  (+58 more)
sql/win32/sql/: buildall.cmd  cleanall.cmd  sql.sln
xflaim/: COPYRIGHT  INSTALL.W32  Makefile  Makefile.am  README  README.W32  autogen.sh  configure  configure.ac  libxflaim.changes  libxflaim.pc.in  xflaim.sln
xflaim/csharp/cstest/: BackupDbTest.cs  CacheTests.cs  CheckDbTest.cs  CompareStringsTests.cs  CopyDbTest.cs  CreateDbTest.cs  DOMNodeTest.cs  ImportTests.cs  OpenDbTest.cs  RebuildDbTest.cs  RemoveDbTest.cs  RenameDbTest.cs  RestoreDbTest.cs  SettingsTests.cs  StatsTests.cs  StreamTests.cs  VectorTests.cs  cstest.cs
xflaim/csharp/xflaim/: Backup.cpp  Backup.cs  BackupClient.cs  BackupStatus.cs  CacheInfo.cs  DOMNode.cpp  DOMNode.cs  DataVector.cpp  DataVector.cs  Db.cpp  Db.cs  DbCopyStatus.cs  DbInfo.cpp  DbInfo.cs  DbRenameStatus.cs  DbSystem.cpp  DbSystem.cs  DbSystemStats.cpp  DbSystemStats.cs  IStream.cpp  IStream.cs  OStream.cpp  OStream.cs  Query.cpp  Query.cs  RCODE.cs  RestoreClient.cs  RestoreStatus.cs  dbCheck.cs  dbRebuild.cs
xflaim/debian/: control  libxflaim.install  rules
xflaim/docs/: Doxyfile  INSTALL  INSTALL.W32  Makefile.am
xflaim/docs/doxygen/: doxyfile.in
xflaim/java/jni/: jbackup.cpp  jdatavector.cpp  jdb.cpp  jdbsystem.cpp  jdomnode.cpp  jistream.cpp  jniftk.cpp  jniftk.h  jnirestore.cpp  jnirestore.h  jnistatus.cpp  jnistatus.h  jostream.cpp  jposistream.cpp  jquery.cpp  xflaim_Backup.h  xflaim_BackupClient.h  xflaim_BackupStatus.h  xflaim_BlockIOStats.h  xflaim_CHECKINFO.h  xflaim_CHECKINFO_CheckPhaseCodes.h  xflaim_CacheInfo.h  (+45 more)
xflaim/m4/: ac_prog_csc_works.m4  ac_prog_csvm_works.m4  ac_prog_javac_works.m4  ac_prog_try_csc.m4  ac_prog_try_csvm.m4  ac_prog_try_jar.m4  ac_prog_try_java.m4  ac_prog_try_javac.m4  ac_prog_try_javadoc.m4  ac_prog_try_javah.m4  ac_prog_try_jni.m4  flm_ftk_search.m4  flm_prog_try_csc.m4  flm_prog_try_csvm.m4  flm_prog_try_jar.m4  flm_prog_try_java.m4  flm_prog_try_javac.m4  flm_prog_try_javadoc.m4  flm_prog_try_javah.m4  flm_prog_try_jni.m4
xflaim/obs/: xflaim.spec.in
xflaim/sample/: Makefile.am  sample.cpp  sample.vcproj
xflaim/src/: Makefile.am  btreeinfo.cpp  checksum.cpp  ddcreate.cpp  f64bitfh.cpp  f64bitfh.h  f_btpool.h  f_btree.cpp  f_btree.h  f_ccs.cpp  f_ccs.h  f_nici.cpp  f_nici.h  fbtrset.cpp  fbtrset.h  fbuff.cpp  fcache.h  fcollate.cpp  fcollate.h  fcomfact.cpp  fcomfact.h  fdbcnfig.cpp  fdbcopy.cpp  fdbremov.cpp  fdbrenam.cpp  fdict.cpp  fdict.h  fdllmain.cpp  fdoclist.cpp  fdom.cpp  fdynbtre.cpp  fdynbuf.cpp  fdynsset.cpp  fdynsset.h  ffilehdl.cpp  ffilehdl.h  ffilehdr.cpp  ffilesys.cpp  filesys.h  flaimsys.h  (+89 more)
xflaim/util/: Makefile.am  basictest.vcproj  basictestsrv.cpp  binarytest.cpp  binarytest.vcproj  checkdb.cpp  checkdb.vcproj  colldeftest.vcproj  colldeftestsrv.cpp  dbdiff.cpp  dbdiff.h  dictchangetest.cpp  dictchangetest.vcproj  dictdeftest.vcproj  dictdeftestsrv.cpp  diffbackups.cpp  dirtyexittest1.vcproj  dirtyexittest1srv.cpp  dirtyexittest2.vcproj  dirtyexittest2srv.cpp  domedit.cpp  domedit.h  domnodetest.vcproj  domnodetestsrv.cpp  enctest.vcproj  enctestsrv.cpp  fdomedt.cpp  flm_dlst.cpp  flm_dlst.h  flm_lutl.cpp  flm_lutl.h  flmunittest.cpp  flmunittest.h  fshell.cpp  fshell.h  ftx.cpp  importtest.vcproj  importtestsrv.cpp  indexdeftest.vcproj  indexdeftestsrv.cpp  (+39 more)
(+474 files in other folders)
