lib_LTLIBRARIES = libflaim.la
libflaim_la_SOURCES = \
  checksum.cpp \
  ddcreate.cpp \
  ddprep.cpp \
  ecache.cpp \
  ecache.h \
  f64bitfh.cpp \
  f64bitfh.h \
  fbcd.cpp \
  fblob.cpp \
  fbuff.cpp \
  fbuff.h \
  f_coltb1.cpp \
  fcs_bios.cpp \
  fcs_dis.cpp \
  fcs_dos.cpp \
  fcs_fis.cpp \
  fcs.h \
  fcs_ipis.cpp \
  fcs_ipos.cpp \
  fcs_tcp.cpp \
  fcs_util.cpp \
  fcs_wire.cpp \
  fdbcnfig.cpp \
  fdbcopy.cpp \
  fdb.cpp \
  fdbremov.cpp \
  fdbrenam.cpp \
  fddpcode.h \
  fdictbld.cpp \
  fdict.cpp \
  fdir.h \
  fdynbtre.cpp \
  fdynsset.cpp \
  fdynsset.h \
  fexpimp.cpp \
  ffilehdl.cpp \
  ffilehdl.h \
  ffilehdr.cpp \
  ffilesys.cpp \
  ffilesys.h \
  filesys.h \
  fitem.cpp \
  flaim.h \
  flaimsys.h \
  flalloc.cpp \
  flbackup.cpp \
  flblddb.cpp \
  flblddbo.cpp \
  flblksum.cpp \
  flchkdb.cpp \
  flchkix.cpp \
  flchktr.cpp \
  flclose.cpp \
  flconvrt.cpp \
  flcreate.cpp \
  fldbglog.cpp \
  flerror.cpp \
  flerrstr.cpp \
  flfixed.cpp \
  flfixed.h \
  flgdrecs.cpp \
  flgethdr.cpp \
  flindex.cpp \
  flist.cpp \
  flist.h \
  flkeymak.cpp \
  flkeyret.cpp \
  flkeys.cpp \
  flmimon.cpp \
  flmimon.h \
  flmstat.cpp \
  flmstat.h \
  flog.cpp \
  flog.h \
  flopen.cpp \
  flprintf.cpp \
  flrcodes.cpp \
  flrddrct.cpp \
  flreduce.cpp \
  flresdrn.cpp \
  flsweep.cpp \
  fltrabrt.cpp \
  fltrbeg.cpp \
  fltrcmit.cpp \
  fltrnum.cpp \
  flupdate.cpp \
  flutil.cpp \
  flverify.cpp \
  fmisc.cpp \
  fmutxref.h \
  fnative.cpp \
  f_nici.cpp \
  f_nici.h \
  fntable.cpp \
  fobjtrck.cpp \
  fobjtrck.h \
  fpackoff.h \
  fpackon.h \
  fposix.cpp \
  fposix.h \
  fqcur.cpp \
  fqdecl.cpp \
  fqeval2.cpp \
  fqeval3.cpp \
  fqeval.cpp \
  fqget.cpp \
  fqkeys.cpp \
  fqlog.cpp \
  fqopt.cpp \
  fqparse.cpp \
  fqprep.cpp \
  fqread.cpp \
  fqsrch.cpp \
  fqstack.cpp \
  fqtextc.cpp \
  fquery.h \
  frec.cpp \
  frecset.cpp \
  frestore.cpp \
  frestore.h \
  frsetblk.cpp \
  frset.cpp \
  frset.h \
  fsblk_u.cpp \
  fscomblk.cpp \
  fsconvrt.cpp \
  fscounts.cpp \
  fscursor.cpp \
  fscursor.h \
  fsdatacu.cpp \
  fsdelelm.cpp \
  fsinselm.cpp \
  fslfile.cpp \
  fslfileu.cpp \
  fsnext.cpp \
  fsprev.cpp \
  fsrecget.cpp \
  fsrecupd.cpp \
  fsrefspl.cpp \
  fsrefupd.cpp \
  fsrvlock.cpp \
  fsrvlock.h \
  fssearch.cpp \
  fssplblk.cpp \
  fstructs.h \
  fsuperfl.cpp \
  fsuperfl.h \
  fsv_glob.cpp \
  fsv.h \
  fsv_hdlr.cpp \
  fsv_sctx.cpp \
  fsv_sesn.cpp \
  fsv_sev.cpp \
  fsv_tcph.cpp \
  fsv_wire.cpp \
  fsysdata.cpp \
  ftkdir.cpp \
  ftk.h \
  ftkmem.h \
  ftkmisc.cpp \
  ftkmod.cpp \
  ftknsem.cpp \
  ftknsem.h \
  ftkpath.cpp \
  ftkrand.cpp \
  ftksem.cpp \
  ftksem.h \
  ftkthrd.cpp \
  ftkthrd.h \
  ftktime.cpp \
  ftkwptxt.h \
  f_tocoll.cpp \
  ftrace.cpp \
  ftrace.h \
  f_uncoll.cpp \
  funicode.cpp \
  furl.cpp \
  furl.h \
  fwin.cpp \
  fwin.h \
  fwpasia.cpp \
  fwpchar.cpp \
  fwpchrs.cpp \
  fwpcoll.cpp \
  fxml.cpp \
  fxml.h \
  gbinary.cpp \
  gd2tree.cpp \
  gdcopy.cpp \
  gddiff.cpp \
  gddiff.h \
  gdfind.cpp \
  gdgraft.cpp \
  gdmisc.cpp \
  gdpool.cpp \
  gdtrvrs1.cpp \
  gnative.cpp \
  gnbcd.cpp \
  gnum2txt.cpp \
  gtxt2bin.cpp \
  gtxt2num.cpp \
  gunicode.cpp \
  imonbase.cpp \
  imonchk.cpp \
  imonerr.cpp \
  imonfact.cpp \
  imonfdb.cpp \
  imonffil.cpp \
  imonfhdl.cpp \
  imonfhsh.cpp \
  imonfmgr.cpp \
  imonfram.cpp \
  imonfsys.cpp \
  imonix.cpp \
  imonlhdr.cpp \
  imonqury.cpp \
  imonrche.cpp \
  imonrec.cpp \
  imonscfg.cpp \
  imonsche.cpp \
  imonsel.cpp \
  imonslmg.cpp \
  imonstat.cpp \
  imonutil.cpp \
  kyasia1.cpp \
  kyasia2.cpp \
  kybldkey.cpp \
  kybuild.cpp \
  kycollat.cpp \
  kycompnd.cpp \
  kyeword.cpp \
  kyget.cpp \
  kyqsort.cpp \
  kyunlock.cpp \
  lock.cpp \
  rcache.cpp \
  recover.cpp \
  rfl.cpp \
  rfl.h \
  scache.cpp \
  translog.cpp

libflaim_la_LDFLAGS = -version-info 0:0:0

