lib_LTLIBRARIES = libflaim.la
libflaim_la_SOURCES = \
  checksum.cpp \
  ecache.cpp \
  ecache.h \
  f_nici.cpp \
  f_nici.h \
  f64bitfh.cpp \
  f64bitfh.h \
  fblob.cpp \
  fbuff.cpp \
  fbuff.h \
  fcs.cpp \
  fcs.h \
  fdb.cpp \
  fdbcnfig.cpp \
  fdbcopy.cpp \
  fdbremov.cpp \
  fdbrenam.cpp \
  fdict.cpp \
  fdict.h \
  fdir.h \
  fdynbtre.cpp \
  fdynsset.cpp \
  fdynsset.h \
  ffilehdl.cpp \
  ffilehdl.h \
  ffilehdr.cpp \
  ffilesys.cpp \
  ffilesys.h \
  fgedcom.cpp \
  filesys.h \
  flaim.h \
  flaimsys.h \
  flalloc.cpp \
  flbackup.cpp \
  flchkdb.cpp \
  flclose.cpp \
  flconvrt.cpp \
  flcreate.cpp \
  fldbglog.cpp \
  flerror.cpp \
  flfixed.cpp \
  flfixed.h \
  flindex.cpp \
  flist.cpp \
  flist.h \
  flkeyret.cpp \
  flmimon.cpp \
  flmimon.h \
  flmstat.cpp \
  flmstat.h \
  flog.cpp \
  flog.h \
  flopen.cpp \
  flprintf.cpp \
  flrddrct.cpp \
  flreduce.cpp \
  flsweep.cpp \
  flupdate.cpp \
  flutil.cpp \
  flverify.cpp \
  fmisc.cpp \
  fmutxref.h \
  fnlm.cpp \
  fnlm.h \
  fntable.cpp \
  fnumber.cpp \
  fobjtrck.cpp \
  fobjtrck.h \
  fpackoff.h \
  fpackon.h \
  fposix.cpp \
  fposix.h \
  fqcur.cpp \
  fqdecl.cpp \
  fqeval.cpp \
  fqget.cpp \
  fqkeys.cpp \
  fqlog.cpp \
  fqopt.cpp \
  fqparse.cpp \
  fqprep.cpp \
  fqread.cpp \
  fqsrch.cpp \
  fqstack.cpp \
  fquery.h \
  frebuild.cpp \
  frec.cpp \
  frecset.cpp \
  frset.cpp \
  frset.h \
  frsetblk.cpp \
  fsblk_u.cpp \
  fscomblk.cpp \
  fsconvrt.cpp \
  fscounts.cpp \
  fscursor.cpp \
  fscursor.h \
  fsdatacu.cpp \
  fsdelelm.cpp \
  fsinselm.cpp \
  fslfile.cpp \
  fslfileu.cpp \
  fsnext.cpp \
  fsprev.cpp \
  fsrecget.cpp \
  fsrecupd.cpp \
  fsrefspl.cpp \
  fsrefupd.cpp \
  fsrvlock.cpp \
  fsrvlock.h \
  fssearch.cpp \
  fssplblk.cpp \
  fstructs.h \
  fsuperfl.cpp \
  fsuperfl.h \
  fsv.cpp \
  fsv.h \
  fsysdata.cpp \
  ftext.cpp \
  ftk.h \
  ftkdir.cpp \
  ftkmem.h \
  ftkmisc.cpp \
  ftkmod.cpp \
  ftknlm.h \
  ftknsem.cpp \
  ftknsem.h \
  ftkpath.cpp \
  ftkrand.cpp \
  ftksem.cpp \
  ftksem.h \
  ftkthrd.cpp \
  ftkthrd.h \
  ftktime.cpp \
  ftrace.cpp \
  ftrace.h \
  ftrans.cpp \
  furl.cpp \
  furl.h \
  fwin.cpp \
  fwin.h \
  fxml.cpp \
  fxml.h \
  gdpool.cpp \
  imonbase.cpp \
  imonchk.cpp \
  imonerr.cpp \
  imonfact.cpp \
  imonfdb.cpp \
  imonffil.cpp \
  imonfhdl.cpp \
  imonfhsh.cpp \
  imonfmgr.cpp \
  imonfram.cpp \
  imonfsys.cpp \
  imonix.cpp \
  imonlhdr.cpp \
  imonqury.cpp \
  imonrche.cpp \
  imonrec.cpp \
  imonscfg.cpp \
  imonsche.cpp \
  imonsel.cpp \
  imonslmg.cpp \
  imonstat.cpp \
  imonutil.cpp \
  kybuild.cpp \
  kycollat.cpp \
  kyget.cpp \
  lock.cpp \
  nlmload.cpp \
  nwyield.cpp \
  rcache.cpp \
  recover.cpp \
  rfl.cpp \
  rfl.h \
  scache.cpp \
  translog.cpp

libflaim_la_LDFLAGS = -version-info 0:0:0

