lib_LTLIBRARIES = libxflaim.la
libxflaim_la_SOURCES = \
  btreeinfo.cpp \
  checksum.cpp \
  ddcreate.cpp \
  f_btpool.cpp \
  f_btpool.h \
  f_btree.cpp \
  f_btree.h \
  f_nici.cpp \
  f_nici.h \
  f64bitfh.cpp \
  f64bitfh.h \
  fbtrset.cpp \
  fbtrset.h \
  fbuff.cpp \
  fbuff.h \
  fcache.h \
  fcollate.cpp \
  fcollate.h \
  fcomfact.cpp \
  fcomfact.h \
  fdbcnfig.cpp \
  fdbcopy.cpp \
  fdbremov.cpp \
  fdbrenam.cpp \
  fdict.cpp \
  fdict.h \
  fdir.h \
  fdllmain.cpp \
  fdoclist.cpp \
  fdom.cpp \
  fdynbtre.cpp \
  fdynbuf.cpp \
  fdynbuf.h \
  fdynsset.cpp \
  fdynsset.h \
  ffilehdl.cpp \
  ffilehdl.h \
  ffilehdr.cpp \
  ffilesys.cpp \
  ffilesys.h \
  filesys.h \
  flaimsys.h \
  flalloc.cpp \
  flbackup.cpp \
  flblddb.cpp \
  flblksum.cpp \
  flchkdb.cpp \
  flchkix.cpp \
  flchktr.cpp \
  flclose.cpp \
  flconvrt.cpp \
  flcreate.cpp \
  fldbglog.cpp \
  flerror.cpp \
  flerrstr.cpp \
  flfixed.cpp \
  flfixed.h \
  flgethdr.cpp \
  flindex.cpp \
  flkeyret.cpp \
  flmstat.cpp \
  flmstat.h \
  flog.cpp \
  flog.h \
  flopen.cpp \
  flprintf.cpp \
  flreduce.cpp \
  flsweep.cpp \
  fltrabrt.cpp \
  fltrbeg.cpp \
  fltrcmit.cpp \
  flutil.cpp \
  flverify.cpp \
  fntable.cpp \
  fnumber.cpp \
  fposix.cpp \
  fposix.h \
  fqeval.cpp \
  fqsort.cpp \
  fquery.cpp \
  fquery.h \
  frecread.cpp \
  frecread.h \
  frestore.cpp \
  frset.cpp \
  frset.h \
  frsetblk.cpp \
  fsblk_u.cpp \
  fscursor.cpp \
  fscursor.h \
  fsdatacu.cpp \
  fslfile.cpp \
  fslfileu.cpp \
  fsrefupd.cpp \
  fsrvlock.cpp \
  fsrvlock.h \
  fstream.cpp \
  fstructs.h \
  fsuperfl.cpp \
  fsuperfl.h \
  fsysdata.cpp \
  ftk.h \
  ftkdir.cpp \
  ftkmem.h \
  ftkmisc.cpp \
  ftkpath.cpp \
  ftkrand.cpp \
  ftksem.cpp \
  ftkthrd.cpp \
  ftkthrd.h \
  ftktime.cpp \
  funicode.cpp \
  fvector.cpp \
  fwin.cpp \
  fwin.h \
  fxml.cpp \
  fxml.h \
  fxpath.cpp \
  fxpath.h \
  inifile.cpp \
  inifile.h \
  kybldkey.cpp \
  kybuild.cpp \
  kycollat.cpp \
  kyeword.cpp \
  kyqsort.cpp \
  kyunlock.cpp \
  ncache.cpp \
  nodeinfo.cpp \
  recover.cpp \
  regexp.cpp \
  rfl.cpp \
  rfl.h \
  scache.cpp \
  translog.cpp \
  unitable.h \
  xflaim.h

libxflaim_la_LDFLAGS = -version-info 0:0:0

