lib_LTLIBRARIES = libxflaim.la

java_jni_dir = ../java/jni

java_jni_srcs = \
  $(java_jni_dir)/jbackup.cpp \ 
  $(java_jni_dir)/jdatavector.cpp \
  $(java_jni_dir)/jdb.cpp \
  $(java_jni_dir)/jdbsystem.cpp \
  $(java_jni_dir)/jdomnode.cpp \
  $(java_jni_dir)/jniftk.cpp \
  $(java_jni_dir)/jniftk.h \
  $(java_jni_dir)/jnirestore.cpp \
  $(java_jni_dir)/jnirestore.h \
  $(java_jni_dir)/jnistatus.cpp \
  $(java_jni_dir)/jnistatus.h \
  $(java_jni_dir)/jposistream.cpp \
  $(java_jni_dir)/xflaim_Backup.h \
  $(java_jni_dir)/xflaim_BackupClient.h \
  $(java_jni_dir)/xflaim_BackupStatus.h \
  $(java_jni_dir)/xflaim_CHECKINFO.h \
  $(java_jni_dir)/xflaim_CHECKINFO_CheckPhaseCodes.h \
  $(java_jni_dir)/xflaim_Collections.h \
  $(java_jni_dir)/xflaim_CORRUPTINFO.h \
  $(java_jni_dir)/xflaim_CORRUPTINFO_LOCALE_CODES.h \
  $(java_jni_dir)/xflaim_CREATEOPTS.h \
  $(java_jni_dir)/xflaim_DataVector.h \
  $(java_jni_dir)/xflaim_Db.h \
  $(java_jni_dir)/xflaim_DbCheckFlags.h \
  $(java_jni_dir)/xflaim_DbCheckStatus.h \
  $(java_jni_dir)/xflaim_DbCopyStatus.h \
  $(java_jni_dir)/xflaim_DbInfo.h \
  $(java_jni_dir)/xflaim_DbRebuildStatus.h \
  $(java_jni_dir)/xflaim_DbRenameStatus.h \
  $(java_jni_dir)/xflaim_DbSystem.h \
  $(java_jni_dir)/xflaim_DefaultBackupClient.h \
  $(java_jni_dir)/xflaim_DefaultRestoreClient.h \
  $(java_jni_dir)/xflaim_DOMNode.h \
  $(java_jni_dir)/xflaim_FlmBackupType.h \
  $(java_jni_dir)/xflaim_FlmDataType.h \
  $(java_jni_dir)/xflaim_FlmDictIndex.h \
  $(java_jni_dir)/xflaim_FlmDomNodeType.h \
  $(java_jni_dir)/xflaim_FlmInsertLoc.h \
  $(java_jni_dir)/xflaim_KeyRetrieveFlags.h \
  $(java_jni_dir)/xflaim_PosIStream.h \
  $(java_jni_dir)/xflaim_RCODE.h \
  $(java_jni_dir)/xflaim_ReserveID.h \
  $(java_jni_dir)/xflaim_RestoreAction.h \
  $(java_jni_dir)/xflaim_RestoreClient.h \
  $(java_jni_dir)/xflaim_RestoreStatus.h \
  $(java_jni_dir)/xflaim_TransactionFlags.h \
  $(java_jni_dir)/xflaim_TransactionType.h \
  $(java_jni_dir)/xflaim_XFlaimException.h

libxflaim_la_SOURCES = \
  btreeinfo.cpp \
  checksum.cpp \
  ddcreate.cpp \
  f_btpool.cpp \
  f_btpool.h \
  f_btree.cpp \
  f_btree.h \
  f_nici.cpp \
  f_nici.h \
  f64bitfh.cpp \
  f64bitfh.h \
  fbtrset.cpp \
  fbtrset.h \
  fbuff.cpp \
  fbuff.h \
  fcache.h \
  fcollate.cpp \
  fcollate.h \
  fcomfact.cpp \
  fcomfact.h \
  fdbcnfig.cpp \
  fdbcopy.cpp \
  fdbremov.cpp \
  fdbrenam.cpp \
  fdict.cpp \
  fdict.h \
  fdir.h \
  fdllmain.cpp \
  fdoclist.cpp \
  fdom.cpp \
  fdynbtre.cpp \
  fdynbuf.cpp \
  fdynbuf.h \
  fdynsset.cpp \
  fdynsset.h \
  ffilehdl.cpp \
  ffilehdl.h \
  ffilehdr.cpp \
  ffilesys.cpp \
  ffilesys.h \
  filesys.h \
  flaimsys.h \
  flalloc.cpp \
  flbackup.cpp \
  flblddb.cpp \
  flblksum.cpp \
  flchkdb.cpp \
  flchkix.cpp \
  flchktr.cpp \
  flclose.cpp \
  flconvrt.cpp \
  flcreate.cpp \
  fldbglog.cpp \
  flerror.cpp \
  flerrstr.cpp \
  flfixed.cpp \
  flgethdr.cpp \
  flindex.cpp \
  flkeyret.cpp \
  flmstat.cpp \
  flmstat.h \
  flog.cpp \
  flog.h \
  flopen.cpp \
  flprintf.cpp \
  flreduce.cpp \
  flsweep.cpp \
  fltrabrt.cpp \
  fltrbeg.cpp \
  fltrcmit.cpp \
  flutil.cpp \
  flverify.cpp \
  fntable.cpp \
  fnumber.cpp \
  fposix.cpp \
  fposix.h \
  fqeval.cpp \
  fqsort.cpp \
  fquery.cpp \
  fquery.h \
  frecread.cpp \
  frecread.h \
  frestore.cpp \
  frset.cpp \
  frset.h \
  frsetblk.cpp \
  fsblk_u.cpp \
  fscursor.cpp \
  fscursor.h \
  fsdatacu.cpp \
  fslfile.cpp \
  fslfileu.cpp \
  fsrefupd.cpp \
  fsrvlock.cpp \
  fsrvlock.h \
  fstream.cpp \
  fstructs.h \
  fsuperfl.cpp \
  fsuperfl.h \
  fsysdata.cpp \
  ftk.h \
  ftkdir.cpp \
  ftkmem.h \
  ftkmisc.cpp \
  ftkpath.cpp \
  ftkrand.cpp \
  ftksem.cpp \
  ftkthrd.cpp \
  ftkthrd.h \
  ftktime.cpp \
  funicode.cpp \
  fvector.cpp \
  fwin.cpp \
  fwin.h \
  fxml.cpp \
  fxml.h \
  fxpath.cpp \
  fxpath.h \
  inifile.cpp \
  inifile.h \
  kybldkey.cpp \
  kybuild.cpp \
  kycollat.cpp \
  kyeword.cpp \
  kyqsort.cpp \
  kyunlock.cpp \
  ncache.cpp \
  nodeinfo.cpp \
  recover.cpp \
  regexp.cpp \
  rfl.cpp \
  rfl.h \
  scache.cpp \
  translog.cpp \
  unitable.h \
  xflaim.h \
  $(java_jni_srcs)

libxflaim_la_CPPFLAGS = -I$(top_srcdir)/java/jni
libxflaim_la_LDFLAGS = -version-info 0:0:0


